@@ -4,5 +4,46 @@
 <!-- If you delete this file and reopen the project it will be recreated. -->
 <project name="org.netbeans.performance.uml" default="netbeans" basedir=".">
     <description>Builds, tests, and runs the project org.netbeans.performance.uml</description>
+
+    <property name="test.timeout" value="3000000"/>
+
+    <property name="test.run.args" value="-client -Xss2m -Xms32m -Xmx1024m -XX:PermSize=32m -XX:MaxPermSize=200m -Xverify:none -ea"/>
+
+    <target name="test" description="Uses test-single to run each suite in different VM">
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLSetupTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLActionsTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLActionsOpenUMLProjectTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLMenusTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLActionsReverseEngineeringTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\MeasureUMLMemoryFootprintTest*"/>
+            <param name="test.type" value="qa-functional"/>
+        </antcall>
+<!-- Disabled because Startup Tests don't work yet
+        <antcall target="test-single">
+            <param name="test.includes" value="**\PrepareIDEForUMLComplexMeasurementsTest*"/>
+            <param name="test.type" value="unit"/>
+        </antcall>
+        <antcall target="test-single">
+            <param name="test.includes" value="**\ComplexUMLDiagramStartupTest*"/>
+            <param name="test.type" value="unit"/>
+        </antcall>-->
+    </target>
+
     <import file="nbproject/build-impl.xml"/>
 </project>
